# hw3-jpchiu26

./: Makefile  README.md  myst.yml  pyproject.toml
ligotools/tests/: test_readligo.ipynb
